Renamed createElements and fixed text colour not changing in dark mode in login and callback pages

--- a/src/css/login.css
+++ b/src/css/login.css
@@ -3,6 +3,10 @@ body {
     align-items: center;
 }
 
+p {
+    color: var(--text1);
+}
+
 p, button {
     margin-bottom: 3vmin;
     margin-top: 3vmin;
